Bug 1645223 - Disable WebRender if XRender is enabled. r=aosmond

Differential Revision: https://phabricator.services.mozilla.com/D83655